--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -160,7 +160,7 @@
                                                 <p> •	При сумме депозита от 10 000$ до 50 000$ - 20/80%, где 80%-полагается инвестору;</p>
                                                 <p> •	При сумме депозита свыше 50 000$ - 10/90%, где 90%-полагается инвестору.</p>
                                                 <p> При этом, при ВАРИАНТЕ регистрации №1 комиссионное вознаграждение должно быть переведено Инвестором на реквизиты компании GBB любым удобным доступным способом с 1 по 5 число каждого месяца, следующего за отчетным месяцем после закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
-                                                <p> Как зарегистрироваться в Портфель №1 «Фондовый» (ссылка)</p>
+                                                <p> Как зарегистрироваться в Портфель №1 «Фондовый»     <a href="/docs/1.docx" style="color: #0a6ebd"> (ссылка) </a> </p>
                                                 <p>Как пополнить Портфель №2 «IPO»</p>
                                                 <p> Для  Варианта №1 – (ссылка ШАГ № 6)</p>
                                                 <p>ШАГ №1 ПОПОЛНИТЕ БРОКЕРСКИЙ СЧЕТ</p>
@@ -169,7 +169,11 @@
                                                 <p>Безналичным переводом по реквизитам со счета любого банка</p>
                                                 <p>В приложении «Мой брокер»  2,5% комиссия и лимит 100 000 рублей в месяц</p>
                                                 <p>Будьте внимательны: в других банках возможно взимание комиссии за перевод на брокерский счет компании БКС.</p>
-                                                <p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом. Как оплатить DUTY? (ссылка Как оплатить DUTY).</p>
+                                                <p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом. Как оплатить DUTY?
+                                                    <a href="/docs/Instructions_How_to_pay_DUTY.docx" style="color: #0a6ebd"> (ссылка Как оплатить DUTY). </a>
+
+
+                                                </p>
                                                 <p> Для Варианта №2</p>
                                                 <p> Вам необходимо пополнить лицевой счет личного кабинета в проекте GBB любым удобным для Вас способом. Как пополнить счет личного кабинета можно узнать тут (ссылка как пополнить баланс личного кабинета).</p>
                                                 <p> Далее отправить денежные средства с личного счета в Портфель №1, нажав кнопку портфеля и указав сумму перевода. После этого, инвестированная сумма отображается в Портфеле №1-Ф.</p>
