--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -175,7 +175,8 @@
 
                                                 </p>
                                                 <p> Для Варианта №2</p>
-                                                <p> Вам необходимо пополнить лицевой счет личного кабинета в проекте GBB любым удобным для Вас способом. Как пополнить счет личного кабинета можно узнать тут (ссылка как пополнить баланс личного кабинета).</p>
+                                                <p> Вам необходимо пополнить лицевой счет личного кабинета в проекте GBB любым удобным для Вас способом. Как пополнить счет личного кабинета можно узнать тут
+                                                    <a href="/admin/add/" style="color: #0a6ebd">(ссылка как пополнить баланс личного кабинета).</a> </p>
                                                 <p> Далее отправить денежные средства с личного счета в Портфель №1, нажав кнопку портфеля и указав сумму перевода. После этого, инвестированная сумма отображается в Портфеле №1-Ф.</p>
                                                 <p>Начисление доходности происходит в личный кабинет не реже 1 раза в месяц с 1-5 число месяца, следующего за отчетным. Вывести денежные средства можно сразу же через обратную форму, указав способ вывода (реквизиты).</p>
                                                 <p>Примечание: Внимание! Начисление доходности и отчетный период будут исчисляться всегда с 1-го числа месяца, независимо от даты пополнения счета.</p>
