--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -193,7 +193,7 @@
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>Фондовый</h5> <br /><br /><br />
+                                <h5>Портфель #1 ФОНДОВЫЙ </h5> <br /><br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -209,7 +209,7 @@
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>Робототезированая торговля <br />   (валютый робот)</h5> <br />
+                                <h5>Портфель #2 «Роботизированная торговля» <br />     <br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -224,7 +224,7 @@
                     <div class="wow bounceInUp" data-wow-delay="0.5s">
                         <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>Робототезированая торговля  <br /> (криптовалютый робот)</h5>
+                                <h5>Портфель #3 IPO <br /><br /><br /></h5>
                                 {#<p class="subtitle">Ruby on Rails</p>#}
                                 <div class="avatar">
                                     <center>
@@ -240,7 +240,7 @@
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
                         <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>IPO</h5><br /><br /><br />
+                                <h5>Портфель #4 «Гарантированный-20»</h5><br />
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
                                     <center>
