--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -230,12 +230,12 @@
 
 
 
-                                    Робототезированая торговля   (валютый робот)  <strong  style="text-align: right;" id="balance-Conservative">{{ report.conservative }}</strong> USD
+                                    Роботизированная торговля   (валютый робот)  <strong  style="text-align: right;" id="balance-Conservative">{{ report.conservative }}</strong> USD
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
-                                    Робототезированая торговля   (криптовалютый робот)  <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
+                                    Роботизированная торговля   (криптовалютый робот)  <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
@@ -271,7 +271,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">  Робототезированая торговля   (валютый робот)   </h5>
+                    <h5 class="modal-title" id="exampleModalLabel">  Роботизированная торговля   (валютый робот)   </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -295,7 +295,7 @@
                                         </tr>
                                         <tr>
                                             <td>Oбъем услуг</td>
-                                            <td>Робототезированая торговля   (валютый робот)</td>
+                                            <td>Роботизированная торговля   (валютый робот)</td>
                                         </tr>
                                         <tr>
                                             <td>Содержание</td>
@@ -332,7 +332,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">    Робототезированая торговля   (криптовалютый робот)  </h5>
+                    <h5 class="modal-title">    Роботизированная торговля   (криптовалютый робот)  </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -355,7 +355,7 @@
                                         </tr>
                                         <tr>
                                             <td>Oбъем услуг</td>
-                                            <td>Робототезированая торговля   (криптовалютый робот)</td>
+                                            <td>Роботизированная торговля   (криптовалютый робот)</td>
                                         </tr>
                                         <tr>
                                             <td>Содержание</td>
