--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -202,7 +202,7 @@
 
 
                                     <a href="/admin/add/" class="btn btn-success btn-primary btn-labeled" style="background-color: #2196f3;">
-                                        Баланс
+                                        Пополнить
                                         <span class="label label-warning">
                                             <span id="balance">
                                                  <i class="md md-account-balance-wallet" style="padding-right: 1px; padding-left: 0px; padding-bottom: 1px;"></i>
@@ -256,7 +256,7 @@
                         <ul class="dropdown-menu animation-dock">
 
                             <li>
-                            <a href="/admin/add/" title="Баланс" style="top: 11px;">
+                            <a href="/admin/add/" title="Пополнить" style="top: 11px;">
                                 Пополнить
                                 <span  data-toggle="tooltip" data-placement="bottom" title="Свободные средства" class="badge style-danger pull-right" style="background-color: #60a49c;">
                                             <i class="md md-account-balance-wallet" style="padding-right: 1px; padding-left: 0px; padding-bottom: 1px;"></i>
@@ -284,7 +284,7 @@
                             <li><a href="/admin/verify"> <i  style=" {% if user is defined %} color: {% if user.isverify == 0 %}  #f00000; {% else %} #73b967; {% endif %} {% endif %} padding-right: 1px; padding-left: 0px; padding-bottom: 1px;" class="md md-verified-user"></i> Верификация аккаунта</a></li>
                             <li><a href="/#contact">Форма обратной связи</a></li>
                             <li>
-                                <a href="/admin/withdraw" title="Баланс" style="top: 11px;">
+                                <a href="/admin/withdraw" title="" style="top: 11px;">
                                     Вывести деньги
                                 </a>
                             </li>
