--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -282,6 +282,60 @@
 <!-- {/literal} END JIVOSITE CODE -->
 
 
+
+<style>
+    .topbutton {
+        z-index: 999;
+        width:200px;
+        border:2px solid #ccc;
+        background:#415437;
+        text-align:center;
+        padding:10px;
+        position:fixed;
+        bottom:5px;
+        left:5px;
+        cursor:pointer;
+        color:#fff;
+        font-family:verdana;
+        font-size:12px;
+        border-radius: 5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -khtml-border-radius: 5px;
+
+
+
+        cursor: pointer;
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+        background-color: #fcec00;
+        transition: all 0.3s ease;
+
+
+
+
+        ont-weight: bold;
+        text-transform: uppercase;
+        line-height: 1.3;
+        color: #000;
+        text-decoration: none;
+        text-align: center;
+        vertical-align: top;
+        border-radius: 35px;
+        border: 1px solid #fcec00;
+        letter-spacing: 0.1em;
+        white-space: nowrap;
+        cursor: pointer;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+        background-color: #fcec00;
+        transition: all 0.3s ease;
+    }
+</style>
+
+<a href="/admin/" title="Хочу вступить в клуб" class="topbutton">Хочу вступить в клуб</a>
+
 </body>
 
 </html>
