--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -192,8 +192,8 @@
                 <div class="col-lg-3 p-3" style="    ">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner">
-                                <h5>Портфель #1 ФОНДОВЫЙ </h5> <br /><br />
+                            <div class="inner" onclick="location.href='/services/individual-management'"  style="cursor: pointer">
+                                <h5>Портфель 1 <br /> ФОНДОВЫЙ </h5>  <br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -208,8 +208,8 @@
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner">
-                                <h5>Портфель #2 «Роботизированная торговля» <br />     <br />
+                            <div class="inner"  onclick="location.href='/services/robotic-trading'"  style="cursor: pointer">
+                                <h5>Портфель 2  <br />  «Роботизированная торговля»      <br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -223,8 +223,8 @@
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.5s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner">
-                                <h5>Портфель #3 IPO <br /><br /><br /></h5>
+                            <div class="inner"  onclick="location.href='/services/ipo'"  style="cursor: pointer">
+                                <h5>Портфель 3 <br /> IPO <br /><br /></h5>
                                 {#<p class="subtitle">Ruby on Rails</p>#}
                                 <div class="avatar">
                                     <center>
@@ -239,8 +239,8 @@
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner">
-                                <h5>Портфель #4 «Гарантированный-20»</h5><br />
+                            <div class="inner"  onclick="location.href='/#contact'"  style="cursor: pointer">
+                                <h5>Портфель 4 <br /> «Гарантированный-20»</h5><br />
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
                                     <center>
@@ -252,11 +252,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
 
 
             </div>
@@ -452,6 +447,16 @@
                             <a href="/services/cars">Открыть</a>
                         </td>
                     </tr>
+
+                    <tr>
+                        <th scope="row">6</th>
+                        <td>Гарантированный доход в валюте</td>
+                        <td style="color:#335433;" > от 10% </td>
+                        <td>
+                            <a href="/#contact">КОНТАКТЫ</a>
+                        </td>
+                    </tr>
+
                     </tbody>
                 </table>
                 </div>
