--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -54,7 +54,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Услуги Клиентам <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/services/individual-management">Индивидуальное доверительное управление</a></li>
+                        <li><a href="/services/individual-management">Фондовая торговля</a></li>
                         <li><a href="/services/robotic-trading">Роботизированная торговля</a></li>
                         <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
                         <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Тайланда</a></li>
