--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -392,7 +392,7 @@
                     <tbody style=" text-align: left;">
                     <tr>
                         <th scope="row">1</th>
-                        <td>Индивидуальное доверительное управление</td>
+                        <td>Фондовая торговля</td>
                         <td style="color:#335433;" > до 10-25%/мес  </td>
                         <td>
                             <a href="/services/individual-management"> Открыть</a>
