--- a/templates/index/about.html.twig
+++ b/templates/index/about.html.twig
@@ -300,7 +300,7 @@
 
 
 
-                                    <div id="about"><h4>Инвестиционный Клуб Global Big Bell</h4></div>
+                                    <div id="about"><h4><b>Инвестиционный Клуб Global Big Bell</b></h4></div>
                                     <p>Мы являемся сообществом единомышленников в области аналитики               и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств, а также обучения финансовой грамотности и других видов обучения.</p>
                                     <p>Описание</p>
                                     <p>Чтобы изменить себя – измени Свое окружение!</p>
