--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -50,11 +50,6 @@
                                             </div>
                                             <div class="card-body">
 
-                                                <button onclick="location.href='/docs/1.zip'" style="color: #f2f3f3;
-                                    background-color: #4caf50;
-                                    border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
-                                                    Инструкции
-                                                </button>
 
 
 
@@ -63,10 +58,15 @@
 
 
 
-                                                <p> Портфель №1 «Фондовый»</p>
+
+                                                {#<p> Портфель №1 «Фондовый»</p>#}
+
+                                                <h3><b>Портфель №1 «Фондовый»</b></h3>
+
+
                                                 <p>Портфель №1 «Фондовый» создан для инвесторов, которые знакомы или хотя бы раз слышали понятие «Фондовый рынок» и «Биржа».</p>
                                                 <p>Наши трейдеры приумножают Ваш депозит за счет совершения спекулятивных сделок на фондовом рынке таких базовых активов как фьючерсные контракты на нефть марки «Brent», индекс РТС, ММВБ, фьючерсы на валютные пары доллар/рубль, евро/доллар, акции Сбербанка                   и другие инструменты.</p>
-                                                <p>Кроме этого, в среднесрочной и долгосрочной стратегии мы применяем «структурные портфели», состоящие из ликвидных акций голубых фишек, акций первого эшелона и на наш взгляд особо перспективных активов                 на классическом фондовом рынке, совмещая их с фьючерсными контрактами, но придерживаясь стратегии прежде всего сохранения депозита  </p>                                          и максимально-безопасного его приумножения.
+                                                <p>Кроме этого, в среднесрочной и долгосрочной стратегии мы применяем «структурные портфели», состоящие из ликвидных акций голубых фишек, акций первого эшелона и на наш взгляд особо перспективных активов                 на классическом фондовом рынке, совмещая их с фьючерсными контрактами, но придерживаясь стратегии прежде всего сохранения депозита   и максимально-безопасного его приумножения.  </p>
                                                 <p> Важно помнить, что преобладающее большинство сделок в данном продукте проводится на срочном рынке (примерное соотношение 30/70                        в пользу фьючерсов), так как это наиболее интересный на наш взгляд рынок для приумножения и разгона депозитов, поэтому риски несколько выше, чем при классической торговле акциями.</p>
                                                 <p> В нашей торговой системе при открытии сделок трейдер в обязательном порядке, всегда выставляет «стоп-лоссы», поэтому потери минимальны, а вероятность заработать значительно выше, благодаря имеющемуся опыту и наличию в команде GBB настоящих профессионалов трейдеров и аналитиков.</p>
                                                 <p> Наш проект выступает партнером брокера ООО «Компания БКС» и помогает Вам открывать счета в системе указанного брокера.</p>
@@ -84,7 +84,7 @@
 
 
 
-                                                <p> Основные характеристики</p>
+                                                <p> <b>Основные характеристики </b></p>
 
 
                                                 <table class="table table-bordered table-dark">
@@ -159,7 +159,7 @@
                                                 <p> •	При сумме депозита до 10 000$ - 30/70%, где 70%-полагается инвестору;</p>
                                                 <p> •	При сумме депозита от 10 000$ до 50 000$ - 20/80%, где 80%-полагается инвестору;</p>
                                                 <p> •	При сумме депозита свыше 50 000$ - 10/90%, где 90%-полагается инвестору.</p>
-                                                <p> При этом, при ВАРИАНТЕ регистрации №1 комиссионное вознаграждение должно быть переведено Инвестором на реквизиты компании GBB любым удобным доступным способом с 1 по 5 число каждого месяца, следующего за отчетным месяцем после закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
+                                                <p> При этом, комиссионное вознаграждение должно быть переведено Инвестором на реквизиты компании GBB любым удобным доступным способом с 1 по 5 число каждого месяца, следующего за отчетным месяцем после закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
                                                 <p> Как зарегистрироваться в Портфель №1 «Фондовый»     <a href="/docs/1.docx" style="color: #0a6ebd"> (ссылка) </a> </p>
                                                 <p>Как пополнить Портфель №2 «IPO»</p>
                                                 <p> Для  Варианта №1 – (ссылка ШАГ № 6)</p>
@@ -187,17 +187,13 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+                                                    <p>
+                                                        <button onclick="location.href='/docs/1.zip'" style="color: #f2f3f3;
+                                        background-color: #4caf50;
+                                        border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
+                                                            Скачать  все инструкции одним архивом
+                                                        </button>
+                                                    </p>
 
 
 
@@ -213,6 +209,7 @@
                                                     {#<p>Aliquam vehicula sem ut pede. Cras purus lectus, egestas eu, vehicula at, imperdiet sed, nibh. Morbi consectetuer luctus felis. Donec vitae nisi. Aliquam tincidunt feugiat elit. Duis sed elit ut turpis ullamcorper feugiat. Praesent pretium, mauris sed fermentum hendrerit.</p>#}
                                                 {#</div>#}
                                             </div><!--end .card-body -->
+
                                         </article>
                                     </div><!--end .col -->
                                     <!-- END BLOG POST TEXT -->
@@ -223,7 +220,7 @@
 
 
 
-                                            <h3 class="text-light">Основные характеристики </h3>
+                                            <h3 class="text-light"><b>Основные характеристики </b> </h3>
                                             <ul class="nav nav-pills nav-stacked nav-transparent">
                                                 <li><a href="#"><span class="badge pull-right"> до 10-25%/мес </span>Доходность</a></li>
                                                 {#<li><a href="/docs/attachments.zip"><span class="badge pull-right"> zip </span>Фото</a></li>#}
