--- a/templates/services/ipo.html.twig
+++ b/templates/services/ipo.html.twig
@@ -215,7 +215,7 @@
 
 
 
-                                            <h3 class="text-light">Основные характеристики </h3>
+                                            <h3 class="text-light"><b>Основные характеристики </b></h3>
                                             <ul class="nav nav-pills nav-stacked nav-transparent">
                                                 <li><a href="#"><span class="badge pull-right"> до 100% - годовых </span>Доходность</a></li>
                                                 {#<li><a href="/docs/attachments.zip"><span class="badge pull-right"> zip </span>Фото</a></li>#}
