--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -77,7 +77,7 @@
 
 
                                                 <p>Описание</p>
-                                                <p>Портфель №2 «Роботизированная торговля» создан для инвесторов, которые понимают и оценивают риски, готовые психологически к временным просадкам депозита до 10-20%, но последующим взлетам до 15-20 % в месяц, кому не страшна волатильность, и кто готов инвестировать в среднесрок             и долгосрок.</p>
+                                                <p><b>Портфель №2 «Роботизированная торговля» </b> создан для инвесторов, которые понимают и оценивают риски, готовые психологически к временным просадкам депозита до 10-20%, но последующим взлетам до 15-20 % в месяц, кому не страшна волатильность, и кто готов инвестировать в среднесрок             и долгосрок.</p>
 
                                                 <p>Основной инструмент в этом портфеле – роботизированная торговля, сфера применения – Валютный рынок и Криптовалютный рынок. Риски – умеренно-агрессивные и на среднесрочной  и долгосрочной дистанции дают отличный результат.</p>
                                                 <p>Сейчас масса предложений с различными автоматизированными алгоритмами, однако зачастую Вы покупаете кота в мешке и не знаете, как он работает. В этой связи инвестор платит сначала за робот до 1000 долларов, а потом еще и на нем теряет свои средства, потому что не соблюдает правила работы с инструментом, а чаще просто не знает что делать, либо купил робота-«сливатора».</p>
@@ -203,7 +203,7 @@
 
 
 
-                                            <h3 class="text-light">Основные характеристики </h3>
+                                            <h3 class="text-light"><b>Основные характеристики </b></h3>
                                             <ul class="nav nav-pills nav-stacked nav-transparent">
                                                 <li><a href="#"><span class="badge pull-right">10-20% в месяц</span>Доходность</a></li>
                                                 {#<li><a href="/docs/attachments.zip"><span class="badge pull-right"> zip </span>Фото</a></li>#}
