--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -93,7 +93,7 @@
                                                 <p>4. Исключение сценария потери 100 % депозита</p>
                                                 <p>5. Управляющий, который следит за роботом в режиме 24/7</p>
                                                 <p>6. В случае покупки, мы помогаем Вам в установке робота на Ваш компьютер и другая информационно-консультативная помощь</p>
-                                                <p>Основные характеристики</p>
+                                                <p><b>Основные характеристики</b></p>
 
 
 
